@@ -31,6 +31,8 @@ static ProgressWindow *global_progress_window;
 void
 ProgressGlue::Create(const TCHAR *text)
 {
+  CommonInterface::main_window.RefreshSize();
+
   if (global_progress_window == NULL)
     global_progress_window = new ProgressWindow(XCSoarInterface::main_window);
 
@@ -54,6 +56,7 @@ ProgressGlue::Step()
     return;
 
   global_progress_window->step();
+  CommonInterface::main_window.RefreshSize();
   CommonInterface::main_window.refresh();
 }
 
@@ -64,6 +67,7 @@ ProgressGlue::SetValue(unsigned value)
     return;
 
   global_progress_window->set_pos(value);
+  CommonInterface::main_window.RefreshSize();
   CommonInterface::main_window.refresh();
 }
 
