@@ -6,6 +6,7 @@ Version 6.2.1 - not yet released
 * faster METAR and TAF download
 * Android
   - fix hang on quit
+  - fix screen corruption when rotating the progress screen
 * Mac OS X
   - fix clock query
   - store data in ~/XCSoarData
